--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
@@ -4,8 +4,6 @@
 <link rel="import" href="../../../../lib/iron-icons/iron-icons.html">
 <link rel="import" href="../../../../lib/cotton-checkbox/cotton-checkbox.html">
 <link rel="import" href="../../../../lib/cotton-cookies/cotton-cookies.html">
-<link rel="import" href="../../alexandriatimenavigator/alexandria-pocket-time-navigator.html">
-<link rel="import" href="../../alexandriatimerangenavigator/alexandria-pocket-time-range-navigator.html">
 <link rel="import" href="alexandria-catalog-grouping.html">
 
 <script src="../../../../lib/cotton-cookies/cookies.js"></script>
@@ -23,18 +21,10 @@
                 <li class="empty layout vertical center center-justified">[[NoGroupings]]</li>
             </template>
             <template is="dom-repeat" items="[[groupingList]]" as="grouping">
-                <!--<template is="dom-if" if="[[grouping.temporal]]">-->
-                <!--<li class="grouping">-->
-                <!--<cotton-zombie display="AlexandriaTimeRangeNavigator" widget="AlexandriaPocketTimeRangeNavigator"></cotton-zombie>-->
-                <!--<cotton-zombie display="AlexandriaTimeNavigator" widget="AlexandriaPocketTimeNavigator"></cotton-zombie>-->
-                <!--</li>-->
-                <!--</template>-->
-                <!--<template is="dom-if" if="[[!grouping.temporal]]">-->
                 <li class="grouping">
                     <paper-icon-button icon="icons:check"></paper-icon-button>
                     <alexandria-catalog-grouping grouping$="[[grouping]]" on-selection-change="_handleGroupingChange"></alexandria-catalog-grouping>
                 </li>
-                <!--</template>-->
             </template>
         </ul>
     </template>
@@ -59,6 +49,7 @@
             min-width: 300px;
             height: calc(100% - 31px);
             overflow: auto;
+            @apply(--grouping-list);
         }
         :host .groupings .grouping {
             border-bottom: 1px solid #ddd;
