--- a/alexandria/ui-elements/src/widgets/alexandria-desktop.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-desktop.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../../lib/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="alexandria-tab-layout.html">
 <link rel="import" href="alexandria-menu-layout.html">
+<link rel="import" href="alexandriatablayout/alexandria-tab-layout-mobile.html">
 <link rel="import" href="alexandriamenulayout/alexandria-menu-layout-mobile.html">
 
 <script src="alexandriadesktop/requester.js"></script>
@@ -32,6 +33,9 @@
         :host {
             display: block;
             height: 100%;
+        }
+        :host app-drawer {
+            --app-drawer-width: 350px;
         }
         :host app-drawer-layout, :host app-drawer-layout .content.main {
             height: 100%;
@@ -65,14 +69,22 @@
         }
         :host paper-icon-button.toggle {
             position: absolute;
-            margin-left: 0;
-            margin-top: 56px;
             z-index: 2;
+            height: 50px;
+            width: 50px;
+            margin-left: 10px;
+            margin-top: 7px;
         }
         :host paper-icon-button.toggle {
             display: none;
         }
         @media screen and (max-width: 736px) {
+            :host paper-icon-button.toggle, :host paper-drawer-panel ::content #drawer {
+                display: block;
+            }
+        }
+        /* tablet-small */
+        @media all and (min-width: 600px) and (orientation: portrait) {
             :host paper-icon-button.toggle, :host paper-drawer-panel ::content #drawer {
                 display: block;
             }
@@ -109,9 +121,8 @@
             },
 
             _displayType : function(type) {
-                this._createZombie(this.$.drawer, type, "AlexandriaMenuLayoutMobile");
-                var layoutZombie = this._createZombie(this.$.main, type, type);
-                layoutZombie.whenPersonified().execute(() => this.menuButtonHidden = true);
+                this._createZombie(this.$.drawer, type, type + "Mobile");
+                this._createZombie(this.$.main, type, type);
             },
 
             _createZombie : function(container, type, widget) {
