--- a/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
@@ -71,11 +71,19 @@
             height: calc(100% - 1px);
         }
         @media screen and (max-width: 736px) {
+            :host cotton-layout ::content .info {
+                margin-left: 43px;
+            }
             :host cotton-layout:not(.fullscreen) ::content > iron-pages {
                 height: calc(100% - 98px);
             }
             :host cotton-layout.fullscreen ::content > iron-pages {
                 height: calc(100% - 57px);
+            }
+        }
+        @media all and (min-width: 600px) and (orientation: portrait) {
+            :host cotton-layout ::content .info {
+                margin-left: 43px;
             }
         }
     </style>
