--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -143,6 +143,7 @@
             font-size: 9pt;
             margin-right: 10px;
             margin-top: 3px;
+            white-space: nowrap;
         }
         :host .group-header {
             margin: 10px 13px;
