--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-sorting.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-sorting.html
@@ -30,6 +30,7 @@
             -moz-border-radius: 4px;
             border-radius: 4px;
             cursor: pointer;
+            white-space: nowrap;
         }
         :host .sorting[active] {
             background: var(--accent-color);
@@ -79,10 +80,10 @@
             _refreshSelected : function() {
                 window.setTimeout(() => {
                     this.querySelectorAll(".sorting").forEach(sorting => sorting.removeAttribute("active"));
-                    if (this.selectedSorting == null) return;
-                    var selected = this.querySelector(".sorting." + this.selectedSorting.name);
-                    if (selected != null) selected.setAttribute("active", "true");
-                }, 100);
+                if (this.selectedSorting == null) return;
+                var selected = this.querySelector(".sorting." + this.selectedSorting.name);
+                if (selected != null) selected.setAttribute("active", "true");
+            }, 100);
             },
 
             _selectSorting : function(event) {
