--- a/alexandria/ui-elements/src/widgets/alexandriapanel/alexandria-panel-drawer.html
+++ b/alexandria/ui-elements/src/widgets/alexandriapanel/alexandria-panel-drawer.html
@@ -20,8 +20,20 @@
         <iron-pages id="tabs-content" class$="flex" selected="{{_selectedView}}" attr-for-selected="name">
             <template is="dom-repeat" items="[[_viewList]]" as="view">
                 <template is="dom-if" if="[[_isTabLayoutView(view)]]">
+                    <template is="dom-if" if="[[_isMoldContainer(view)]]">
+                        <div name$="[[view.name]]"><div class="layout horizontal center center-justified" style="height:100%">[[NoDrawer]]</div></div>
+                    </template>
                     <template is="dom-if" if="[[_isCatalogContainer(view)]]">
                         <div name$="[[view.name]]"><cotton-zombie display="AlexandriaViewContainerCatalog" widget="AlexandriaViewContainerCatalogDrawer" object$="[[display.id]][[view.name]]"></cotton-zombie></div>
+                    </template>
+                    <template is="dom-if" if="[[_isPanelContainer(view)]]">
+                        <div name$="[[view.name]]"><div class="layout horizontal center center-justified" style="height:100%">[[NoDrawer]]</div></div>
+                    </template>
+                    <template is="dom-if" if="[[_isDisplayContainer(view)]]">
+                        <div name$="[[view.name]]"><div class="layout horizontal center center-justified" style="height:100%">[[NoDrawer]]</div></div>
+                    </template>
+                    <template is="dom-if" if="[[_isSetContainer(view)]]">
+                        <div name$="[[view.name]]"><div class="layout horizontal center center-justified" style="height:100%">[[NoDrawer]]</div></div>
                     </template>
                 </template>
             </template>
@@ -45,8 +57,10 @@
 
         const AlexandriaPanelDrawerDictionary = {
             es: {
+                NoDrawer: "no hay opciones"
             },
             en: {
+                NoDrawer: "no options"
             }
         };
 
