alexandria-ui: added 1.1.2 version. Fix bug refreshing items in drawer view.

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
@@ -28,11 +28,13 @@
         },
 
         _itemsArrival : function() {
-            this.querySelector("paper-toast#itemsArrival").open();
+            var toast = this.querySelector("paper-toast#itemsArrival");
+            if (toast != null) toast.open();
         },
 
         _closeItemsArrival : function() {
-            this.querySelector("paper-toast#itemsArrival").close();
+            var toast = this.querySelector("paper-toast#itemsArrival");
+            if (toast != null) toast.close();
         },
 
         _refreshWithArrival : function() {
