alexandria-ui: added basePath and fix alpaca forms height if no toolbar. Added relative load for app-theme fonts.

--- a/alexandria/ui-elements/src/widgets/_common/alexandria-configuration-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/alexandria-configuration-behavior.html
@@ -12,6 +12,10 @@
             return url;
         },
 
+        getBasePath: function() {
+            return this._getProperty("base-path");
+        },
+
         _getProperty: function(name) {
             var widget = this;
 
