--- a/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
+++ b/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
@@ -79,6 +79,9 @@
         padding: 0 10px;
         overflow: auto;
     }
+    .dialog > .content.no-toolbar {
+        height: 100%;
+    }
     .toolbar {
         border-top: 1px solid #ddd;
         padding: 10px 15px 0;
