alexandria-ui: added mold view into desktop. Added view widths. Refactored title stamp and its editor.

--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
@@ -27,6 +27,7 @@
 
         _updateClassName : function () {
             var properties = this.stamp.properties;
+            if (this.stamp.layout.toLowerCase().indexOf("flexible") != -1) $(this).addClass("flex");
             if (properties == null) return;
             if (this.stamp.properties.className == null) return;
             $(this).addClass(this.stamp.properties.className);
