--- a/alexandria/ui-elements/src/widgets/alexandria-menu-layout.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-menu-layout.html
@@ -12,6 +12,7 @@
 <link rel="import" href="alexandria-catalog.html">
 <link rel="import" href="alexandria-temporal-range-catalog.html">
 <link rel="import" href="alexandria-temporal-time-catalog.html">
+<link rel="import" href="alexandria-mold.html">
 
 <script src="alexandriamenulayout/requester.js"></script>
 <script src="alexandriamenulayout/notifier-listener.js"></script>
