--- a/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
@@ -10,6 +10,7 @@
 <link rel="import" href="alexandria-catalog.html">
 <link rel="import" href="alexandria-temporal-range-catalog.html">
 <link rel="import" href="alexandria-temporal-time-catalog.html">
+<link rel="import" href="alexandria-mold.html">
 
 <script src="alexandriatablayout/requester.js"></script>
 <script src="alexandriatablayout/notifier-listener.js"></script>
