--- a/alexandria/ui-elements/src/widgets/alexandriatablayout/alexandria-tab-layout-drawer.html
+++ b/alexandria/ui-elements/src/widgets/alexandriatablayout/alexandria-tab-layout-drawer.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../alexandriacatalog/alexandria-catalog-drawer.html">
 <link rel="import" href="../alexandriatemporalrangecatalog/alexandria-temporal-range-catalog-drawer.html">
 <link rel="import" href="../alexandriatemporaltimecatalog/alexandria-temporal-time-catalog-drawer.html">
+<link rel="import" href="../alexandriamold/alexandria-mold-drawer.html">
 
 <script src="requester.js"></script>
 <script src="notifier-listener.js"></script>
